--- a/frontend-ferremax/public/index.html
+++ b/frontend-ferremax/public/index.html
@@ -42,6 +42,11 @@
     </a>
 
     <!-- Bootstrap core JavaScript-->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
     <script src="assets"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
